--- a/paper/index.Rmd
+++ b/paper/index.Rmd
@@ -1,7 +1,9 @@
 --- 
 title: "The emergence of lexical categories from iterated vocal imitation"
 author: "Pierce Edmiston, Marcus Perlman, and Gary Lupyan"
-output: bookdown::gitbook
+output:
+  bookdown::gitbook:
+    toc_depth: 1
 documentclass: book
 bibliography: [packages.bib]
 biblio-style: apalike
@@ -15,6 +17,15 @@ link-citations: yes
 knitr::write_bib(c(
   .packages(), 'bookdown', 'knitr', 'rmarkdown'
 ), 'packages.bib')
+
+knitr::opts_chunk$set(
+  echo = FALSE,
+  message = FALSE,
+  warning = FALSE,
+  cache = TRUE,
+  cache.path = ".cache/",
+  fig.path = "figs/"
+)
 ```
 
 This research describes the process by which conventional word forms can arise gradually and uneffortfully through repeated imitation of nonverbal environmental sounds. Participants played an online version of the children's game "Telephone" where an auditory message is passed from person to person with the goal of keeping the message unchanged. Instead of a typical message, participants had to pass on imitations of nonverbal environment sounds (e.g., glass breaking, water splashing). These imitations were hypothesized to become more wordlike as they are repeated. "Wordlike-ness" was measured in two ways. First we measured the stability of the acoustic signal, finding that imitations that were repeated became more stable both in acoustic similarity and in lexical agreement. Second we measured the extent to which each each imitation could be related back to its original source, finding that categorical information about the type of sound is more resilient to transmissional decay than individuating information.
