--- a/paper/index.Rmd
+++ b/paper/index.Rmd
@@ -1,5 +1,5 @@
 --- 
-title: "The emergence of lexical categories from iterated vocal imitation"
+title: "Creating words from iterated vocal imitation"
 author: "Pierce Edmiston, Marcus Perlman, and Gary Lupyan"
 output:
   bookdown::gitbook:
@@ -24,10 +24,11 @@ knitr::opts_chunk$set(
   warning = FALSE,
   cache = TRUE,
   cache.path = ".cache/",
-  fig.path = "figs/"
+  fig.path = "figs/",
+  results = "hide"
 )
 ```
 
-This research describes the process by which conventional word forms can arise gradually and uneffortfully through repeated imitation of nonverbal environmental sounds. Participants played an online version of the children's game "Telephone" where an auditory message is passed from person to person with the goal of keeping the message unchanged. Instead of a typical message, participants had to pass on imitations of nonverbal environment sounds (e.g., glass breaking, water splashing). These imitations were hypothesized to become more wordlike as they are repeated. "Wordlike-ness" was measured in two ways. First we measured the stability of the acoustic signal, finding that imitations that were repeated became more stable both in acoustic similarity and in lexical agreement. Second we measured the extent to which each each imitation could be related back to its original source, finding that categorical information about the type of sound is more resilient to transmissional decay than individuating information.
+New words are constantly being invented, yet we have never witnessed the emergence of spoken words in the absence of prior convention. We report the results of a large-scale (n=XXXX) experiment designed to investigate whether spoken words can emerge solely from the process of repeated imitation beginning with environmental sounds. Participants played an online version of the children’s game “Telephone” wherein a message is passed from person to person with the goal of keeping the it unchanged. The first generation of players heard familiar environmental sounds (e.g., glass breaking, water splashing) and had to imitate the sounds. The next generation imitated the imitations, and so on for 10 generations (XXXX imitators). We subsequently assessed whether the imitations (1) became more stable and word-like, (2) retained a resemblance to the original environmental sound as measured by people’s ability to guess the meanings in the absence of learning, and (3) the extent to which the imitations from different generations were suitable as verbal category labels. The results showed that vocal imitations became progressively more word-like as measured by acoustic similarity and agreement of orthographic transcriptions, that even after 10 generations, they could be matched above chance to the environmental sound that motivated them, and that imitations from later generations were more effective as learned category labels. These results show how repeated imitation, even in the absence of an explicit intention to communicate, can create progressively more word-like forms while retaining a semblance of iconicity.
 
 # Introduction {-}
