Add N to abstract

--- a/paper/index.Rmd
+++ b/paper/index.Rmd
@@ -27,8 +27,13 @@ knitr::opts_chunk$set(
   fig.path = "figs/",
   results = "hide"
 )
+
+library(wordsintransition)
+data("subjects")
+N <- length(unique(subjects$subj_id))
+N_imitators <- nrow(unique(subjects[subjects$experiment == "imitations", "subj_id"]))
 ```
 
-New words are constantly being invented, yet we have never witnessed the emergence of spoken words in the absence of prior convention. We report the results of a large-scale (n=XXXX) experiment designed to investigate whether spoken words can emerge solely from the process of repeated imitation beginning with environmental sounds. Participants played an online version of the children’s game “Telephone” wherein a message is passed from person to person with the goal of keeping the it unchanged. The first generation of players heard familiar environmental sounds (e.g., glass breaking, water splashing) and had to imitate the sounds. The next generation imitated the imitations, and so on for 10 generations (XXXX imitators). We subsequently assessed whether the imitations (1) became more stable and word-like, (2) retained a resemblance to the original environmental sound as measured by people’s ability to guess the meanings in the absence of learning, and (3) the extent to which the imitations from different generations were suitable as verbal category labels. The results showed that vocal imitations became progressively more word-like as measured by acoustic similarity and agreement of orthographic transcriptions, that even after 10 generations, they could be matched above chance to the environmental sound that motivated them, and that imitations from later generations were more effective as learned category labels. These results show how repeated imitation, even in the absence of an explicit intention to communicate, can create progressively more word-like forms while retaining a semblance of iconicity.
+New words are constantly being invented, yet we have never witnessed the emergence of spoken words in the absence of prior convention. We report the results of a large-scale (N = `r N`) experiment designed to investigate whether spoken words can emerge solely from the process of repeated imitation beginning with environmental sounds. Participants played an online version of the children’s game “Telephone” wherein a message is passed from person to person with the goal of keeping the it unchanged. The first generation of players heard familiar environmental sounds (e.g., glass breaking, water splashing) and had to imitate the sounds. The next generation imitated the imitations, and so on for 10 generations (`r N_imitators` imitators). We subsequently assessed whether the imitations (1) became more stable and word-like, (2) retained a resemblance to the original environmental sound as measured by people’s ability to guess the meanings in the absence of learning, and (3) the extent to which the imitations from different generations were suitable as verbal category labels. The results showed that vocal imitations became progressively more word-like as measured by acoustic similarity and agreement of orthographic transcriptions, that even after 10 generations, they could be matched above chance to the environmental sound that motivated them, and that imitations from later generations were more effective as learned category labels. These results show how repeated imitation, even in the absence of an explicit intention to communicate, can create progressively more word-like forms while retaining a semblance of iconicity.
 
 # Introduction {-}
