Update automated acoustic similarity plots

--- a/reports/2-collect-imitations/report.Rmd
+++ b/reports/2-collect-imitations/report.Rmd
@@ -34,6 +34,10 @@ global_theme <- theme_minimal() +
 ```{r 2-similarity-within-chains}
 ```
 
+```{r 2-acoustic-similarity-comparison}
+```
+
+
 ## Acoustic similarity (judgments)
 
 ```{r 2-raters}
