--- a/reports/3-imitation-matches/matching-accuracy.Rmd
+++ b/reports/3-imitation-matches/matching-accuracy.Rmd
@@ -17,7 +17,6 @@ library(broom)
 # devtools::install_github("lupyanlab/words-in-transition", subdir = "wordsintransition")
 library(wordsintransition)
 
-
 # Load the results of the "Guess the seed" surveys.
 data("imitation_matches")
 
@@ -25,18 +24,21 @@ bad_question_ids <- imitation_matches %>%
   filter(question_type != "catch_trial") %>%
   group_by(question_pk) %>%
   summarize(accuracy = mean(is_correct)) %>%
-  filter(accuracy == 0) %>%
+  filter(accuracy == 0 | accuracy == 1) %>%
   .$question_pk
+
+create_question_type_by_seed_id <- . %>% 
+  mutate(question_type_by_seed_id = paste(survey_type, seed_id, sep = ":"))
 
 imitation_matches %<>%
   filter(
-    question_type != "catch_trial",           # Drop catch trials
-    !(question_pk %in% bad_question_ids)      # Drop bad questions
+    question_type != "catch_trial",         # Drop catch trials
+    !(question_pk %in% bad_question_ids)    # Drop bad questions
   ) %>%
-  recode_generation() %>%                     # Create generation_1 variable
-  recode_survey_type() %>%                    # Create treatment contrasts
-  add_chance()                                # Add column for chance offset
-
+  recode_generation() %>%                   # Create generation_1 variable
+  recode_survey_type() %>%                  # Create treatment contrasts
+  add_chance() %>%                          # Add column for chance offset
+  create_question_type_by_seed_id()         # Separate question types within seeds
 
 # Theme colors
 colors <- RColorBrewer::brewer.pal(4, "Set2")
@@ -63,26 +65,16 @@ base_plot <- ggplot(imitation_matches) +
   )
 ```
 
-# Means grouped by seed
-
 The seed is the primary unit of analysis. Each seed is used in approximately 4 different transmission chains. We are collapsing across all of the chains leading from each seed for this analysis.
 
-```{r, echo=FALSE, fig.width=2, results="hide"}
+```{r, echo=FALSE, fig.width=3, results="hide"}
 library(crotchet)  # devtools::install_github("pedmiston/crotchet")
 draw_graphviz("definitions", "wordsintransition")
 ```
 
-Since each imitation is tested in three different survey conditions, the following plot has a total of 48 lines (16 seeds x 3 lines for each seed).
+Here is the most accurate plot that represents the model we are fitting. There are 16 facets, one for each seed, and for each seed, we are fitting 3 lines, one for each question type.
 
-```{r}
-# Show means grouped by seed. Each seed is used
-# in approximately 4 transmission chains.
-create_question_type_by_seed_id <- . %>% 
-  mutate(question_type_by_seed_id = paste(survey_type, seed_id, sep = ":"))
-
-imitation_matches %<>% create_question_type_by_seed_id()
-base_plot <- base_plot %+% imitation_matches
-
+```{r, fig.width=10, fig.height=10}
 seed_means <- imitation_matches %>%
   group_by(seed_id, survey_type, generation) %>%
   summarize(
@@ -93,49 +85,6 @@ seed_means <- imitation_matches %>%
   create_question_type_by_seed_id() %>%
   recode_generation()
 
-# Show means with lines connecting the raw means at each generation
-base_plot +
-  geom_line(aes(group = question_type_by_seed_id, color = survey_type),
-            data = seed_means) +
-  geom_point(aes(size = n, color = survey_type),
-             data = seed_means) +
-  scale_size_continuous("Num survey responses") +
-  theme(legend.position = "right")
-```
-
-# Fit loess lines
-
-These loess lines are fit to the raw data, so they reflect the different number of observations at each generation.
-
-```{r}
-base_plot +
-  geom_smooth(aes(group = question_type_by_seed_id, color = survey_type),
-              method = "loess", se = FALSE) +
-  geom_point(aes(size = n, color = survey_type),
-             data = seed_means) +
-  scale_size_continuous("Num survey responses") +
-  theme(legend.position = "right")
-```
-
-# Fit lm lines
-
-```{r}
-base_plot +
-  geom_smooth(aes(group = question_type_by_seed_id),
-              method = "lm", data = seed_means, se = FALSE) +
-  geom_point(aes(size = n, color = survey_type),
-             data = seed_means) +
-  scale_size_continuous("Num survey responses") +
-  theme(legend.position = "right")
-```
-
-Note that there are very few positively sloped lines. This indicates that any uptick in matching accuracy at the end of the chains (near generation == 8) is misleading.
-
-# Show facet plots for each seed
-
-Here is the most accurate plot that represents the model we are fitting. There are 16 facets, one for each seed, and for each seed, we are fitting 3 lines, one for each question type.
-
-```{r, fig.width=10, fig.height=10}
 seed_map <- imitation_matches %>%
   select(seed_id, category = chain_name) %>%
   unique() %>%
@@ -143,6 +92,7 @@ seed_map <- imitation_matches %>%
   arrange(seed_id) %>%
   mutate(seed_ix = 1:n()) %>%
   ungroup()
+
 imitation_matches %<>% left_join(seed_map)
 seed_means %<>% left_join(seed_map)
 base_plot <- base_plot %+% imitation_matches
@@ -161,16 +111,17 @@ base_plot +
 
 This model estimates what is true about the relationship between the three lines within each of the facets in the plot immediately above this one.
 
-```{r cache=TRUE}
+```{r matches-mod, cache=TRUE}
 matches_mod <- glmer(
-  is_correct ~ generation_1 * (same_v_between + same_v_within) + (generation_1|seed_id/chain_name) + (1|subj_id),
+  is_correct ~ offset(chance_log) + generation_1 * (same_v_between + same_v_within) +
+    (generation_1|seed_id/chain_name) + (1|subj_id),
   family = "binomial", data = imitation_matches
 )
 ```
 
 ```{r}
-imitation_matches_preds <- expand.grid(
-    generation_1 = unique(imitation_matches$generation_1) %>% na.omit(),
+matches_preds <- expand.grid(
+    generation_1 = 0:7,
     survey_type = c("between", "same", "within"),
     stringsAsFactors = FALSE
   ) %>%
@@ -187,126 +138,11 @@ original_plot <- base_plot +
   scale_size_continuous("Num survey responses") +
   theme(legend.position = "right") +
   geom_smooth(aes(color = survey_type, ymin = is_correct - se, ymax = is_correct + se),
-              stat = "identity", data = imitation_matches_preds)
+              stat = "identity", data = matches_preds)
 original_plot
 ```
 
-# Transform the means for each seed by subtracting out random effects
-
-```{r, fig.height=8, fig.cap = "Visual depiction of mean transformation. The solid circles are the raw means. The solid line is the random effect from the glmer model. The dashed line is the fixed effect from the glmer model. The open circles are the transformed means. The distance between the solid circle and the solid line is the same as the distance between the open circle and the dashed line. The extent of the transformation from the actual mean to the transformed mean is shown as arrows extending from the origin."}
-
-# Fit the model used to transform the means, removing the random effects
-transform_mod <- glmer(
-  is_correct ~ generation_1 + same_v_between + same_v_within + (generation_1|seed_id),
-  family = "binomial", data = imitation_matches
-)
-
-# Get the predicted effects for each seed by adding together fixed and random effects.
-predicted_logodds <- coef(transform_mod)$seed_id %>%
-  as.data.frame() %>%
-  select(
-    intercept = `(Intercept)`,
-    generation_slope = generation_1,
-    same_v_between_slope = same_v_between,
-    same_v_within_slope = same_v_within
-  ) %>%
-  fix_data_frame(newcol = "seed_id") %>%
-  mutate(seed_id = as.numeric(seed_id))
-
-
-predicted_accuracies <- expand.grid(
-    seed_id = predicted_logodds$seed_id,
-    generation_1 = 0:7,
-    survey_type = c("between", "same", "within")
-  ) %>%
-  recode_survey_type() %>%
-  left_join(predicted_logodds, .) %>%
-  transmute(
-    seed_id = as.numeric(seed_id),
-    generation_1,
-    survey_type,
-    predicted_logodds = intercept +
-      generation_slope * generation_1 +
-      same_v_between_slope * same_v_between +
-      same_v_within_slope * same_v_within,
-    predicted_accuracy = exp(predicted_logodds)/(1 + exp(predicted_logodds))
-  ) %>%
-  recode_survey_type()
-
-ggplot(predicted_accuracies) +
-  aes(generation_1, predicted_accuracy) +
-  geom_point() +
-  facet_wrap("seed_id")
-
-fixed_effect_preds <- tidy(transform_mod, effects = "fixed") %>%
-  select(term, estimate) %>%
-  spread(term, estimate) %>%
-  rename(
-    intercept = `(Intercept)`,
-    generation_slope = generation_1,
-    same_v_between_slope = same_v_between,
-    same_v_within_slope = same_v_within
-  ) %>%
-  merge(., expand.grid(generation_1 = 0:7, survey_type = c("between", "same", "within"))) %>%
-  recode_survey_type() %>%
-  transmute(
-    generation_1,
-    survey_type,
-    fixef_logodds = intercept +
-      generation_slope * generation_1 +
-      same_v_between_slope * same_v_between +
-      same_v_within_slope * same_v_within,
-    fixef_accuracy = exp(fixef_logodds)/(1 + exp(fixef_logodds))
-  )
-
-accuracies <- imitation_matches %>%
-  group_by(seed_id, generation_1, survey_type) %>%
-  summarize(accuracy = mean(is_correct)) %>%
-  ungroup() %>%
-  recode_survey_type() %>%
-  left_join(predicted_accuracies) %>%
-  left_join(fixed_effect_preds) %>%
-  mutate(
-    residual_accuracy = accuracy - predicted_accuracy,
-    adjusted_accuracy = fixef_accuracy + residual_accuracy,
-    delta = adjusted_accuracy - accuracy
-  )
-
-ggplot(accuracies) +
-  aes(generation_1) +
-  geom_line(aes(y = predicted_accuracy, group = survey_type)) +
-  geom_point(aes(y = accuracy)) +
-  geom_line(aes(y = fixef_accuracy, group = survey_type),
-            lty = 2) +
-  geom_point(aes(y = adjusted_accuracy),
-             shape = 1) +
-  # geom_segment(aes(x = generation_1, xend = generation_1,
-  #                  y = 0, yend = delta),
-  #              arrow = arrow(length = unit(0.1, "cm"))) +
-  facet_wrap("seed_id")
-```
-
-```{r}
-adj_seed_means <- accuracies %>%
-  select(seed_id, survey_type, generation_1, delta) %>%
-  left_join(seed_means, .) %>%
-  mutate(is_correct_adj = is_correct + delta,
-         is_correct_adj = ifelse(is_correct_adj < 0, 0, is_correct_adj))
-
-transformed_plot <- base_plot +
-  geom_point(aes(y = is_correct_adj, size = n, color = survey_type),
-             data = adj_seed_means, alpha = 0.6,
-             position = position_jitter(width = 0.2)) +
-  scale_size_continuous("Num survey responses") +
-  theme(legend.position = "right") +
-  geom_smooth(aes(color = survey_type, ymin = is_correct - se, ymax = is_correct + se),
-              stat = "identity", data = imitation_matches_preds)
-```
-
-```{r compare, fig.width = 12}
-gridExtra::grid.arrange(
-  original_plot,
-  transformed_plot,
-  nrow = 1
-)
+```{r mod-results, results="asis"}
+broom::tidy(matches_mod, effects = "fixed") %>%
+  knitr::kable()
 ```
